--新增：project 2 界面练习

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Calculator/Calculator.xcodeproj/xcuserdata
 Calculator/Calculator.xcodeproj/project.xcworkspace/xcuserdata
 ANKPoke/ANKPoke.xcodeproj/project.xcworkspace/xcuserdata
+ANKPoke/ANKPoke.xcodeproj/xcuserdata
